# Pi-Karaoke

./: CMakeLists.txt  Lyric.cpp  Lyric.h  README.md  Song.cpp  Song.h  data.csv  dox.config  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
html/: Lyric_8h_source.html  Song_8h_source.html  annotated.html  classLyric-members.html  classLyric.html  classMainWindow-members.html  classMainWindow.html  classMainWindow__coll__graph.dot  classMainWindow__inherit__graph.dot  classSong-members.html  classSong.html  classUi_1_1MainWindow-members.html  classUi_1_1MainWindow.html  classUi__MainWindow-members.html  classUi__MainWindow.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherit_graph_2.dot  inherits.html  mainwindow_8h_source.html  md_README.html  menudata.js  namespaceUi.html  namespaces.html  pages.html  ui__mainwindow_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  (+30 more)
latex/: annotated.tex  classLyric.tex  classMainWindow.tex  classMainWindow.tex.tmp  classMainWindow__coll__graph.dot  classMainWindow__inherit__graph.dot  classSong.tex  classUi__MainWindow.tex  hierarchy.tex  md_README.tex  namespaceUi.tex  namespaces.tex  refman.tex
lyric/: aijin.lrc  doukeshi.lrc  kuchinashinohana.lrc  pusanhanhekaere.lrc  rabusutouriihatotsuzenni.lrc  tokinonagarenimiwomakase.lrc  tsugarukaikyoufuyugeshiki.lrc  tsugunai.lrc
